fix: Z-index of notes

--- a/assets/css/v2/style.css
+++ b/assets/css/v2/style.css
@@ -876,7 +876,7 @@ blockquote {
 
 blockquote.note {
   position: relative;
-  z-index: -1;
+  z-index: 0;
 }
 
 blockquote.note:before {
@@ -891,6 +891,7 @@ blockquote.note:before {
   padding: 0 0.25rem;
   display: block;
   background-color: var(--color-background);
+  z-index: 999;
 }
 
 blockquote p:first-child {
@@ -1013,7 +1014,7 @@ blockquote.side-callout {
 }
 
 .code-block {
-  position: static;
+  position: relative;
 }
 
 .code-block .code-header:not(:has(.code-type)) {
